you/force-app/main/default/objects/Empreendimento__c/fields/Acabamento__c.field-meta.xml
<CustomField>
    <fullName>Acabamento__c</fullName>
    <description>Porcentagem de conclusão do Acabamento</description>
    <label>Acabamento</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>