you/force-app/main/default/objects/Empreendimento__c/fields/Alvenaria__c.field-meta.xml
<CustomField>
    <fullName>Alvenaria__c</fullName>
    <description>Porcentagem de conclusão da Alvenaria</description>
    <label>Alvenaria</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>