you/force-app/main/default/objects/Empreendimento__c/fields/DataEntregaChaves__c.field-meta.xml
<CustomField>
    <fullName>DataEntregaChaves__c</fullName>
    <description>Data da entrega das chaves
 do empreendimento</description>
    <label>Data da Entrega das Chaves</label>
    <type>Date</type>
</CustomField>