you/force-app/main/default/objects/Empreendimento__c/fields/DisponivelEspelho__c.field-meta.xml
<CustomField>
    <fullName>DisponivelEspelho__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ao ser selecionado, deve deixar o empreendimento em questão disponivel e visivel.</description>
    <inlineHelpText>Indica se o  empreendimento será inserido na funcionalidade &apos;Espelho de Vendas&apos;.</inlineHelpText>
    <label>Disponível no espelho</label>
    <type>Checkbox</type>
</CustomField>