you/force-app/main/default/objects/Empreendimento__c/fields/Estrutura__c.field-meta.xml
<CustomField>
    <fullName>Estrutura__c</fullName>
    <description>Porcentagem de conclusão da Estrutura</description>
    <label>Estrutura</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>