you/force-app/main/default/objects/Empreendimento__c/fields/EvolucaoObra__c.field-meta.xml
<CustomField>
    <fullName>EvolucaoObra__c</fullName>
    <label>Evolução da obra</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>