you/force-app/main/default/objects/Empreendimento__c/fields/Fundacao__c.field-meta.xml
<CustomField>
    <fullName>Fundacao__c</fullName>
    <description>Porcentagem de conclusão da Fundação</description>
    <label>Fundação</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>