you/force-app/main/default/objects/Empreendimento__c/fields/OpcoesLazerDisponiveis__c.field-meta.xml
<CustomField>
    <fullName>OpcoesLazerDisponiveis__c</fullName>
    <description>Opções de lazer disponíveis</description>
    <label>Opções de Lazer Disponíveis</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academia</fullName>
            </value>
            <value>
                <fullName>Ar-condicionado nas áreas de lazer</fullName>
            </value>
            <value>
                <fullName>Ar-condicionado nas áreas internas de lazer</fullName>
            </value>
            <value>
                <fullName>Área para jogos</fullName>
            </value>
            <value>
                <fullName>Áreas comuns entregues equipadas e decoradas</fullName>
            </value>
            <value>
                <fullName>Áreas técnicas</fullName>
            </value>
            <value>
                <fullName>Áreas verdes de acesso exclusivo aos condomínios</fullName>
            </value>
            <value>
                <fullName>Arquibancada</fullName>
            </value>
            <value>
                <fullName>Arquibancada residencial</fullName>
            </value>
            <value>
                <fullName>Atelier</fullName>
            </value>
            <value>
                <fullName>Bar da piscina</fullName>
            </value>
            <value>
                <fullName>Bar lounge no rooftop</fullName>
            </value>
            <value>
                <fullName>Beauty care</fullName>
            </value>
            <value>
                <fullName>Bicicletário</fullName>
            </value>
            <value>
                <fullName>Bicicletario com bike lab</fullName>
            </value>
            <value>
                <fullName>Brinquedoteca</fullName>
            </value>
            <value>
                <fullName>Caixilhos com persiana de enrolar nos APTOS. de 1 Dorm.</fullName>
            </value>
            <value>
                <fullName>Churrasqueira</fullName>
            </value>
            <value>
                <fullName>Churrasqueira com Forno de Pizza</fullName>
            </value>
            <value>
                <fullName>Churrasqueira e piscina com deck molhado e solário</fullName>
            </value>
            <value>
                <fullName>Churrasqueira e spa com solário</fullName>
            </value>
            <value>
                <fullName>Churrasqueira Gourmet</fullName>
            </value>
            <value>
                <fullName>Cinema</fullName>
            </value>
            <value>
                <fullName>Cokitchen</fullName>
            </value>
            <value>
                <fullName>Comércio térreo</fullName>
            </value>
            <value>
                <fullName>Contrapiso com tratamento acústico nas unidades</fullName>
            </value>
            <value>
                <fullName>Coworking</fullName>
            </value>
            <value>
                <fullName>Coworking / Gourmet</fullName>
            </value>
            <value>
                <fullName>Coworking integrado com jogos e café</fullName>
            </value>
            <value>
                <fullName>Coworking no rooftop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>