you/force-app/main/default/objects/Empreendimento__c/fields/SPE__c.field-meta.xml
<CustomField>
    <fullName>SPE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SPE (Sociedade de Propósito Específico)</description>
    <label>SPE</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SPE</relationshipLabel>
    <relationshipName>Empreendimentos</relationshipName>
    <type>Lookup</type>
</CustomField>