you/force-app/main/default/objects/Empreendimento__c/fields/StatusObra__c.field-meta.xml
<CustomField>
    <fullName>StatusObra__c</fullName>
    <description>Status da obra do empreendimento</description>
    <label>Status da Obra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em construção</fullName>
            </value>
            <value>
                <fullName>Entregue</fullName>
            </value>
            <value>
                <fullName>Lançamento</fullName>
            </value>
            <value>
                <fullName>Pré-Lançamento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>