you/force-app/main/default/objects/Empreendimento__c/fields/TipoEmpreendimento__c.field-meta.xml
<CustomField>
    <fullName>TipoEmpreendimento__c</fullName>
    <label>Tipo de Empreendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casa</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Lote</fullName>
            </value>
            <value>
                <fullName>Residencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>