you/force-app/main/default/objects/Empreendimento__c/fields/ValorM__c.field-meta.xml
<CustomField>
    <fullName>ValorM__c</fullName>
    <description>Valor do metro quadrado do empreendimento.</description>
    <label>Valor (m²)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>